<resources>
    <string name="EMPTY"> </string>
    <string name="ImmediateScan">立即扫描</string>
    <string name="moreFuncation">更多功能</string>
    <string name="NewsHotspots">头条新闻热点</string>
    <string name="topNewsDes">看最新时事资讯，娱乐视频热点 ，尽在头条新闻</string>
    <string name="findLink">听一听</string>
    <string name="findLinkDes">有声音频尽情听,更多内容尽在这里</string>
    <string name="scanning">正在扫描中\.\.\.</string>
    <string name="alreadyClean">已经很干净了</string>
    <string name="seeDetails">查看详情</string>
    <string name="scanningGarbage">扫描垃圾</string>
    <string name="scanNow">马上扫描吧！</string>
    <string name="CleanUpGarbage">清理垃圾</string>
    <string name="CleanUp">清理了%1$s垃圾</string>
    <string name="veryClean">您的手机很干净哦</string>
    <string name="WeChatSP">微信专清</string>
    <string name="QQSP">QQ专清</string>
    <string name="ShortVideoSP">短视频专清</string>
    <string name="NoticeBarCleaning">通知栏清理</string>
    <string name="apkManager">安装包管理</string>
    <string name="SoftwareManagement">软件管理</string>
    <string name="pictureClear">图片专清</string>
    <string name="weChatSPDes">一键清理聊天更顺畅</string>
    <string name="qqDes">释放更多空间</string>
    <string name="shortVideoDes">发现%1$s个短视频</string>
    <string name="noticeDes">远离通知打扰的烦恼</string>
    <string name="packageDes">管理你的安装包</string>
    <string name="apkDes">批量卸载应用</string>
    <string name="picDes">发现%1$s张照片</string>
    <string name="clean">清扫</string>
    <string name="Commonly">常用</string>
    <string name="Headlines">头条</string>
    <string name="find">发现</string>
    <string name="my">我的</string>
    <string name="Album">相册</string>
    <string name="videoDes">聊天中的视频</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="doc">文档</string>
    <string name="app">应用</string>
    <string name="apk">安装包</string>
    <string name="allFile">所有文件</string>
    <string name="weChatFile">微信文件</string>
    <string name="qqFile">QQ文件</string>
    <string name="latelyFile">最近文件</string>
    <string name="bigFile">大文件管理</string>
    <string name="checkUpdate">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="cleanOpenFile">清除默认打开方式</string>
    <string name="aboutUs">关于我们</string>
    <string name="floatView">设置</string>
    <string name="zuomian">桌面助手</string>
    <string name="SimilarPictures">相似图片</string>
    <string name="cleanSuccess">清除成功</string>
    <string name="cleanFail">清除失败</string>
    <string name="deepClean">深度清理</string>
    <string name="cleanText">清理</string>
    <string name="cleanDes">定期清理垃圾，保持手机健康</string>
    <string name="unloadingResidue">卸载残留</string>
    <string name="installedApk">安装包</string>
    <string name="unInstalledApk">未安装</string>
    <string name="garbageFile">垃圾文件</string>
    <string name="cacheEmoji">缓存表情</string>
    <string name="friendsCache">朋友圈缓存</string>
    <string name="otherCache">其他缓存</string>
    <string name="tempFile">临时文件</string>
    <string name="headCache">头像缓存</string>
    <string name="spaceCache">图片缓存</string>
    <string name="picCache">图片缓存</string>
    <string name="cleanVar">清理%1$s</string>
    <string name="noticeClean">通知栏清理</string>
    <string name="ApplicationAuthority">申请权限</string>
    <string name="authorityDes">一键清理状态栏需要申请权限</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="noDes">不授予通知读取权限清理通知栏功能将不能使用!</string>
    <string name="itemNotice">条</string>
    <string name="canClean">可清理通知</string>
    <string name="fastClean">一键清理</string>
    <string name="notificationTip">清理垃圾通知 提升手机速度</string>
    <string name="showDes">需要授权获取通知权限</string>
    <string name="justClean">立即清理</string>
    <string name="gotoAuthorize">去授权</string>
    <string name="GeekUninstaller">软件卸载</string>
    <string name="apkClean">安装包清理</string>
    <string name="noSee">未发现</string>
    <string name="garbagePic">垃圾图片</string>
    <string name="noPicClean">已经没有图片可以清理了</string>
    <string name="tips">提示:</string>
    <string name="askDelete">确定要删除%1$s个文件吗？</string>
    <string name="askDelete_">确定要删除%1$s文件吗？</string>
    <string name="deletePicC">清理%1$s张图片</string>
    <string name="deleteShortVideoC">清理%1$s个短视频</string>
    <string name="delete">清理</string>
    <string name="cleanPic">图片清理</string>
    <string name="cleanCount">张可清理</string>
    <string name="runDelete">正在删除\.\.\.</string>
    <string name="cancel">取消</string>
    <string name="AlbumManagement">相册管理</string>
    <string name="VideoManagement">视频管理</string>
    <string name="myAlbum">我的相册</string>
    <string name="Shootme">手机截图</string>
    <string name="qqPicture">QQ相册</string>
    <string name="wechatPicture">微信相册</string>
    <string name="alikePhoto">相似图片</string>
    <string name="other">其他</string>
    <string name="cameraVideo">相机视频</string>
    <string name="DownloadedVideo">下载的视频</string>
    <string name="albumManagerDes">管理你的相册图片</string>
    <string name="screenshotDes">清理无用截图</string>
    <string name="cleanAlikePhoto">清理多余的相似图片</string>
    <string name="videoManagerDes">管理你拍摄的视频</string>
    <string name="downloadVideoDes">管理你下载的视频</string>
    <string name="musicManager">音乐管理</string>
    <string name="loading">加载中···</string>
    <string name="copyTo">复制到</string>
    <string name="storageD">内部存储设备</string>
    <string name="dateUnOrder">日期倒序</string>
    <string name="dateOrder">日期顺序</string>
    <string name="cleanResult">成功删除%1$s个,%2$s个失败</string>
    <string name="deleteFile">删除文件</string>
    <string name="copyFail">复制失败！目标文件夹不能是源文件夹的子文件夹。</string>
    <string name="cover">覆盖</string>
    <string name="existenceFile">目标路径已存在同名的文件，是否覆盖?</string>
    <string name="runPaste">正在粘贴\.\.\.</string>
    <string name="copySuccess">复制粘贴成功！</string>
    <string name="copyFileTip">复制%1$s个文件</string>
    <string name="cleanFielTip">清理%1$s个文件</string>
    <string name="picture">图片</string>
    <string name="fileDes">聊天中的文件</string>
    <string name="file">文件</string>
    <string name="ChatPictures">聊天中的图片</string>
    <string name="voiceDes">聊天中的语音</string>
    <string name="voice">语音</string>
    <string name="circleFriendsDes">朋友圈缓存</string>
    <string name="CircleFriends">朋友圈</string>
    <string name="emojiDes">聊天中的表情</string>
    <string name="emoji">表情</string>
    <string name="picOrVideo">图片或视频</string>
    <string name="SavedPicturesOrVideos">保存的图片或视频</string>
    <string name="runScan">正在扫描中,请稍后再试</string>
    <string name="screenshot">截图</string>
    <string name="PhotosAlbums">相册的图片</string>
    <string name="QQSavedPictures">QQ保存的图片</string>
    <string name="WeChatSavedPictures">微信保存的图片</string>
    <string name="PicturesDownloaded">下载的图片</string>
    <string name="VideoAlbum">相册的视频</string>
    <string name="qqVideo">QQ视频</string>
    <string name="QQSavedVideo">QQ保存的视频</string>
    <string name="weChatVideo">微信视频</string>
    <string name="weChatSavedAndChatVideo">微信保存的视频和聊天中的视频</string>
    <string name="WeChatSavedVideo">微信保存的视频</string>
    <string name="downVideo">下载的视频</string>
    <string name="qqSaveMusic">QQ保存的音乐</string>
    <string name="weChatSaveMusic">微信保存的音乐</string>
    <string name="downMusic">下载的音乐</string>
    <string name="qqSaveApk">QQ保存的安装包</string>
    <string name="weChatSaveApk">微信保存的安装包</string>
    <string name="downApk">下载的安装包</string>
    <string name="qqSaveFile">QQ保存的文件</string>
    <string name="weChatSaveFile">微信保存的文件</string>
    <string name="downFile">下载的文件</string>
    <string name="sizeUnOrder">大小逆序</string>
    <string name="sizeOrder">大小顺序</string>
    <string name="bigManager">大文件管理</string>
    <string name="Loading">正在加载中\.\.\.</string>
    <string name="allChoose">全选</string>
    <string name="assuredClean">放心清理</string>
    <string name="SuccessfulClean">成功清理%1$s垃圾</string>
    <string name="successfulCleanPhoto">成功清理%1$s张照片</string>
    <string name="otherAlbum">其他相册</string>
    <string name="myVideo">我的视频</string>
    <string name="videoClean">短视频专清</string>
    <string name="askDeleteVideo">确定要删除%1$s个视频吗？</string>
    <string name="deleteVideoC">删除%1$s个视频</string>
    <string name="qqManager">QQ管理</string>
    <string name="weChatManager">微信管理</string>
    <string name="yesterday">昨天</string>
    <string name="beforeYesterday">前天</string>
    <string name="just">刚刚</string>
    <string name="minuteAgo">%1$s分钟前</string>
    <string name="hourAgo">%1$s小时前</string>
    <string name="fileUnExis">文件不存在</string>
    <string name="all">全部</string>
    <string name="appSize">应用大小</string>
    <string name="useStorage">存储占用</string>
    <string name="uninstallFail">卸载失败</string>
    <string name="uninstallCount">卸载%1$s个</string>
    <string name="deleteCount">删除%1$s个</string>
    <string name="alreadyInstalled">已安装</string>
    <string name="NotInstalled">未安装</string>
    <string name="RandomSorting">随机排序</string>
    <string name="appSizeT">应用大小：%1$s</string>
    <string name="storage">存储：%1$s</string>
    <string name="unknow">未知</string>
    <string name="versionNumber">版本号：%1$s</string>
    <string name="size">大小：%1$s</string>
    <string name="fromDir">来自:%1$s</string>
    <string name="fileCount">%1$s个文件</string>
    <string name="cacheGarbage">缓存垃圾</string>
    <string name="adGarbage">广告垃圾</string>
    <string name="weChatLog">微信-运行日志</string>
    <string name="weChatSnsAd">微信-朋友圈广告</string>
    <string name="weChatCacheFile">微信-缓存文件</string>
    <string name="weChatCheckUpdate">微信-检查更新文件</string>
    <string name="weChatTemp">微信-临时文件</string>
    <string name="weChatCachePic">微信-缓存图片</string>
    <string name="QQGifOrP">QQ-动画及缩略图</string>
    <string name="QQGifCache">QQ-gif缓存</string>
    <string name="QQDressPic">QQ-装扮图片</string>
    <string name="QQDownApk">QQ-下载的应用安装包</string>
    <string name="QQCachePic">QQ-缓存图片</string>
    <string name="QQCacheFile">QQ-缓存文件</string>
    <string name="QQAdFile">QQ-广告文件</string>
    <string name="QQDressCache">QQ-装扮缓存</string>
    <string name="alipayChatAndPic">支付宝-聊天语音及大图</string>
    <string name="weiboCache">微博-缓存</string>
    <string name="adDownFile">广告-下载文件</string>
    <string name="adFile">广告-文件</string>
    <string name="mapCache">地图-缓存</string>
    <string name="AD">广告</string>
    <string name="qq">QQ</string>
    <string name="weChat">微信</string>
    <string name="weibo">微博</string>
    <string name="alipay">支付宝</string>
    <string name="blankText">暂未发现垃圾</string>
    <string name="allfileDes">已用%1$s,剩余%2$s</string>
    <string name="openDesktopView">开启桌面助手</string>
    <string name="garbageDes">快速了解清除的垃圾</string>
    <string name="qxkqzy">权限开启指引</string>
    <!--、【后台弹出界面】、【锁屏显示】（可选）-->
    <string name="openPermissionDes">1、点击进入【权限管理】(可选) \n\n2、点击【显示悬浮窗】权限 \n\n3、点击选择【允许】</string>
    <string name="open">开启桌面悬浮</string>
    <string name="noOpen">暂不开启</string>
    <string name="daiqingli">待清理垃圾</string>
    <string name="seeUsePermission">需要到设置中打开"查看应用使用情况"权限</string>
    <string name="userTip">此设备不支持查看应用使用情况</string>
    <string name="downloading">正在下载</string>
    <string name="downloadApkAsk">是否下载%1$s?</string>
    <string name="seeVideo">看视频免广告</string>
    <string name="haveNoAdTime">剩余免广告时长%1$d h %2$d m</string>

    <string name="brainpowerText">智能筛选</string>
    <string name="good">最佳</string>
</resources>
