<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:background="#FFF5F5F5"
        android:layout_height="9dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9"
        android:gravity="center">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0.5dp"
            android:background="#FFE6E6E6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreFuncation"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0.5dp"
            android:background="#FFE6E6E6"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/zixun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">
        <ImageView
            android:id="@+id/item_image_home"
            android:layout_marginStart="19dp"
            android:layout_marginTop="18dp"
            android:layout_width="78dp"
            android:layout_height="89dp"
            android:src="@drawable/ic_find_link"/>
        <TextView
            android:id="@+id/item_tv_home"
            android:layout_toRightOf="@id/item_image_home"
            android:text="@string/findLink"
            android:layout_alignTop="@id/item_image_home"
            android:layout_marginTop="6dp"
            android:layout_marginStart="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF222F3A"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findLinkDes"
            android:layout_below="@id/item_tv_home"
            android:layout_toRightOf="@id/item_image_home"
            android:textSize="12sp"
            android:textColor="#FF737373"
            android:layout_marginStart="23dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="23dp"/>
    </RelativeLayout>
</LinearLayout>