<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/barBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/icon_base_back"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/barTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/barBack"
                android:layout_marginLeft="8dp"
                android:textSize="18sp"
                android:textColor="#141414"/>
            <ImageView
                android:id="@+id/barSetting"
                android:layout_width="23dp"
                android:layout_height="25dp"
                tools:visibility="gone"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:clickable="true"
                android:layout_marginEnd="15dp"
                android:focusable="true" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/notificationCount"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_below="@id/bar">
        <RelativeLayout
            android:id="@+id/visible"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:textColor="#3392FD"
                android:text="0"/>
            <TextView
                android:layout_toRightOf="@id/count"
                android:layout_above="@id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#4B4B4B"
                android:text="@string/itemNotice"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/count"
                android:layout_alignBottom="@id/count"
                android:textSize="12sp"
                android:textColor="#4B4B4B"
                android:text="@string/canClean"/>

        </RelativeLayout>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/notificationCount"
        android:layout_marginTop="0dp" />
    <LinearLayout
        android:id="@+id/copyActButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#7fff"
        android:layout_alignParentBottom="true"

        tools:visibility="visible">
        <Button
            android:id="@+id/clean"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:text="@string/fastClean"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textColor="#fff"
            android:background="#1731DE"/>
    </LinearLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar"
        layout="@layout/act_notification_s_clean"/>
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_below="@id/bar">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/clean_request_success"/>
    </FrameLayout>
</RelativeLayout>