<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_zhuanqing_top_bg"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tip"
            android:layout_marginBottom="15dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/back"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_white_back"/>
                <TextView
                    android:id="@+id/myTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/cleanPic"
                    android:layout_toRightOf="@id/back"
                    android:layout_marginLeft="8dp"
                    style="@style/statusBar_home_text"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_marginTop="-1dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1"
            android:visibility="gone">
            <TextView
                android:id="@+id/textCount"
                android:textSize="50sp"
                android:textColor="#fff"
                android:text="0"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/textCount"
                android:layout_toRightOf="@id/textCount"
                android:textColor="#fff"
                android:text="@string/cleanCount"
                android:textSize="14sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/top_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="默认清理选项"
                android:textColor="#ff61697c"
                android:textSize="13sp"
                android:layout_marginLeft="24dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abc"
        android:layout_above="@id/bottomButton">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7fff"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        tools:visibility="visible">
        <View
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_vertical"
            android:textColor="#fff"
            android:background="@drawable/shape_button_ok"/>
        <ImageView
            android:id="@+id/img_anim"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_btn_amin"/>
        <TextView
            android:id="@+id/clean"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/delete"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textColor="#fff" />
    </RelativeLayout>
</RelativeLayout>